Fixed scrollbar styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -239,10 +239,6 @@ p {
   color: var(--widget-text-color);
 }
 
-.innerTile {
-  padding: 10px;
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -292,6 +288,11 @@ p {
   opacity: 0.8;
 }
 
+::-webkit-scrollbar {
+  border-radius: 5px;
+  height:100%  
+}
+
 ::-webkit-scrollbar-track {
   background: #212121;
   border-radius: 5px;
@@ -305,7 +306,7 @@ p {
   );
   border: 1px solid #212121;
   background-clip: content-box;
-  border-radius: 100px;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -314,7 +315,7 @@ p {
     var(--dark-blue) 0%,
     var(--accent-blue) 99%
   );
-  border-radius: 100px;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-track-piece:vertical:start {
@@ -340,14 +341,17 @@ p {
   width: 16px;
   background-position: center 4px;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='50,00 0,50 100,50'/></svg>");
+  border-top-right-radius: 15px;
 }
 
 ::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(112, 112, 112)'><polygon points='50,00 0,50 100,50'/></svg>");
+  border-top-right-radius: 15px;
 }
 
 ::-webkit-scrollbar-button:single-button:vertical:decrement:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='50,00 0,50 100,50'/></svg>");
+  border-top-right-radius: 15px;
 }
 
 ::-webkit-scrollbar-button:single-button:vertical:increment {
@@ -355,14 +359,17 @@ p {
   width: 16px;
   background-position: center 2px;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='0,0 100,0 50,50'/></svg>");
+  border-bottom-right-radius: 15px;
 }
 
 ::-webkit-scrollbar-button:single-button:vertical:increment:hover {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(112, 112, 112)'><polygon points='0,0 100,0 50,50'/></svg>");
+  border-bottom-right-radius: 15px;
 }
 
 ::-webkit-scrollbar-button:single-button:vertical:increment:active {
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(128, 128, 128)'><polygon points='0,0 100,0 50,50'/></svg>");
+  border-bottom-right-radius: 15px;
 }
 
 .tooltip {
@@ -451,23 +458,6 @@ p {
 .tooltip:hover::before,
 .tooltip:hover::after {
   opacity: 1;
-}
-
-.tag {
-  place-self: center;
-  padding: 2rem 3rem 2rem 4rem;
-  color: #222;
-  font: bold 2em system-ui;
-  filter: drop-shadow(-1px 6px 3px rgba(155, 0, 100, 1));
-
-  &:before {
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    background: #fb8c00;
-    clip-path: polygon(30px 0, 100% 0, 100% 100%, 30px 100%, 0 50%);
-    content: "";
-  }
 }
 
 .mainTile {
