--- a/modules/CodeStats/CodeStatsChart.css
+++ b/modules/CodeStats/CodeStatsChart.css
@@ -5,7 +5,7 @@
 }
 .code-stats-wrapper {
   padding: 10px;
-  height: 570px;
+  height: 550px;
 }
 
 .code-stats-wrapper .user-meta {
